crates/keron-lang/tests/corpus/errors/check/match_unreachable_after_wildcard.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unreachable `match` arm: a previous wildcard or binding pattern matches every remaining value
  --> 4:5
  |
4 |     "a" => 2,
  |     ^^^
